kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-frontend
spec:
  selector:
    app: ${APP_NAME}-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
